--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">medicine reader</string>
-    <string name="scan">Scan</string>
+    <string name="app_name">دوائي</string>
+    <string name="scan">بحث كاميرا</string>
+    <string name="search">بحث كتابي</string>
     <string name="tab_text">a7a</string>
 
     <!-- TODO: Remove or change this placeholder text -->
@@ -13,4 +14,5 @@
     <string name="tab_text_5">طريقة التخزين</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_search2">بحث عن الدواء</string>
 </resources>
